@@ -1,3 +1,5 @@
+- Refactor: Update XSD to RAIDES22
+
 2.14.4 (06-01-2023)
 - Improvement: Change legal report transaction boundaries to avoid performance issues
 - Improvement: Improved default raides data for new requests
